; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/uart/extr_uart_dev_ns8250.c_ns8250_bus_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/uart/extr_uart_dev_ns8250.c_ns8250_bus_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_softc = type { %struct.uart_bas }
%struct.uart_bas = type { i32 }
%struct.ns8250_softc = type { i32 }

@REG_IER = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ns8250_bus_detach(%struct.uart_softc* %0) #0 {
  %2 = alloca %struct.uart_softc*, align 8
  %3 = alloca %struct.ns8250_softc*, align 8
  %4 = alloca %struct.uart_bas*, align 8
  %5 = alloca i32, align 4
  store %struct.uart_softc* %0, %struct.uart_softc** %2, align 8
  %6 = load %struct.uart_softc*, %struct.uart_softc** %2, align 8
  %7 = bitcast %struct.uart_softc* %6 to %struct.ns8250_softc*
  store %struct.ns8250_softc* %7, %struct.ns8250_softc** %3, align 8
  %8 = load %struct.uart_softc*, %struct.uart_softc** %2, align 8
  %9 = getelementptr inbounds %struct.uart_softc, %struct.uart_softc* %8, i32 0, i32 0
  store %struct.uart_bas* %9, %struct.uart_bas** %4, align 8
  %10 = load %struct.uart_bas*, %struct.uart_bas** %4, align 8
  %11 = load i32, i32* @REG_IER, align 4
  %12 = call i32 @uart_getreg(%struct.uart_bas* %10, i32 %11)
  %13 = load %struct.ns8250_softc*, %struct.ns8250_softc** %3, align 8
  %14 = getelementptr inbounds %struct.ns8250_softc, %struct.ns8250_softc* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = and i32 %12, %15
  store i32 %16, i32* %5, align 4
  %17 = load %struct.uart_bas*, %struct.uart_bas** %4, align 8
  %18 = load i32, i32* @REG_IER, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @uart_setreg(%struct.uart_bas* %17, i32 %18, i32 %19)
  %21 = load %struct.uart_bas*, %struct.uart_bas** %4, align 8
  %22 = call i32 @uart_barrier(%struct.uart_bas* %21)
  %23 = load %struct.uart_bas*, %struct.uart_bas** %4, align 8
  %24 = call i32 @ns8250_clrint(%struct.uart_bas* %23)
  ret i32 0
}

declare dso_local i32 @uart_getreg(%struct.uart_bas*, i32) #1

declare dso_local i32 @uart_setreg(%struct.uart_bas*, i32, i32) #1

declare dso_local i32 @uart_barrier(%struct.uart_bas*) #1

declare dso_local i32 @ns8250_clrint(%struct.uart_bas*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
